# path_trathing_engine

./: CMakeLists.txt  RenderTools.cpp  RenderTools.h  main.cpp
data/: results_converted_RGB.nit
